--- a/templates/base.html
+++ b/templates/base.html
@@ -66,10 +66,10 @@
                     {% if current_user.is_authenticated %}
                         <!-- Logged In User Menu -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Dashboard</a>
+                            <a class="nav-link" href="{{ url_for('habits.dashboard') }}">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">My Habits</a>
+                            <a class="nav-link" href="{{ url_for('habits.add_habit') }}">Add Habit</a>
                         </li>
                         <li class="nav-item">
                             <span class="nav-link">👤 {{ current_user.email }}</span>
