--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,9 @@
                             <a class="nav-link" href="{{ url_for('habits.dashboard') }}">Dashboard</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('stats.stats_dashboard') }}">📊 Stats</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('habits.add_habit') }}">Add Habit</a>
                         </li>
                         <li class="nav-item">
