--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,7 @@
     
     {% block extra_css %}{% endblock %}
 </head>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
