--- a/templates/base.html
+++ b/templates/base.html
@@ -742,7 +742,7 @@
                             <a class="nav-link" href="{{ url_for('habits.habit_guide') }}">📖 Guide</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('habits.about') }}">About</a>
+                            <a class="nav-link" href="{{ url_for('profile.about') }}">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('profile.view') }}">👤 Profile</a>
@@ -767,7 +767,7 @@
                             <a class="nav-link" href="{{ url_for('habits.habit_guide') }}">📖 Guide</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('habits.about') }}">About</a>
+                            <a class="nav-link" href="{{ url_for('profile.about') }}">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#features">Features</a>
